# fastapi-production-api

./: Dockerfile  README.md
app/: .env.example  .gitignore  load_local_environment.sh  mypy.ini  pyproject.toml  tests-start.sh
app/app/: __version__.py  backend_pre_start.py  initial_data.py  main.py
app/app/api/: auth.py  deps.py
app/app/api/api_v1/: api.py
app/app/api/api_v1/endpoints/: __init__.py  assign_folder_permission.py  folders.py  folders_and_products.py
app/app/api/api_v1/endpoints/products/products/: products.py
app/app/api/middleware/: accessChecks.py  ratelimit.py
app/app/core/: config.py  handlers.py  redis.py  sentry.py
app/app/crud/: __init__.py  base.py  crud_folders.py  crud_permissions.py  crud_products.py  crud_user.py
app/app/database/: base.py  base_class.py  firebase.py  init_database.py  session.py
app/app/models/: __init__.py  folderPermissionsModel.py  foldersModel.py  userModel.py
app/app/models/product/: productsModel.py
app/app/schema_types/: base_type.py
app/app/schemas/: __init__.py  base_schema.py  folder.py  folder_permission.py  product.py  user.py
app/app/tests/: conftest.py  pytest.ini
app/app/tests/api/api_v1/: test_folder_endpoint.py
app/app/tests/crud/: test_folder.py  test_permissions.py  test_products.py
app/app/tests/utils/: utils.py
app/app/utils/: compare-json.py
